--- a/applications/sink/twitter-message-sink/README.adoc
+++ b/applications/sink/twitter-message-sink/README.adoc
@@ -19,7 +19,7 @@ For fixed target userId use `userId='666'`.
 //tag::configuration-properties[]
 $$twitter.message.update.media-id$$:: $$A media id to associate with the message. A Direct Message may only reference a single media id.$$ *($$Expression$$, default: `$$<none>$$`)*
 $$twitter.message.update.screen-name$$:: $$The screen name of the user to whom send the direct message.$$ *($$Expression$$, default: `$$<none>$$`)*
-$$twitter.message.update.text$$:: $$The direct message text. URL encode as necessary. Max length of 10,000 characters.$$ *($$Expression$$, default: `$$<none>$$`)*
+$$twitter.message.update.text$$:: $$The direct message text. URL encode as necessary. Max length of 10,000 characters.$$ *($$Expression$$, default: `$$payload$$`)*
 $$twitter.message.update.user-id$$:: $$The user id of the user to whom send the direct message.$$ *($$Expression$$, default: `$$<none>$$`)*
 //end::configuration-properties[]
 
