--- a/applications/source/time-source/README.adoc
+++ b/applications/source/time-source/README.adoc
@@ -14,7 +14,7 @@ $$spring.integration.poller.fixed-rate$$:: $$Polling rate period. Mutually exclu
 $$spring.integration.poller.initial-delay$$:: $$Polling initial delay. Applied for 'fixedDelay' and 'fixedRate'; ignored for 'cron'.$$ *($$Duration$$, default: `$$<none>$$`)*
 $$spring.integration.poller.max-messages-per-poll$$:: $$Maximum number of messages to poll per polling cycle.$$ *($$Integer$$, default: `$$<none>$$`)*
 $$spring.integration.poller.receive-timeout$$:: $$How long to wait for messages on poll.$$ *($$Duration$$, default: `$$1s$$`)*
-$$time.date-format$$:: $$Format for the date value.$$ *($$String$$, default: `$$<none>$$`)*
+$$time.date-format$$:: $$Format for the date value.$$ *($$String$$, default: `$$MM/dd/yy HH:mm:ss$$`)*
 //end::configuration-properties[]
 
 //end::ref-doc[]
