--- a/applications/source/websocket-source/README.adoc
+++ b/applications/source/websocket-source/README.adoc
@@ -10,12 +10,12 @@ Properties grouped by prefix:
 
 === websocket.supplier
 
-$$allowed-origins$$:: $$The allowed origins.$$ *($$String$$, default: `$$<none>$$`)*
-$$path$$:: $$The path on which server WebSocket handler is exposed.$$ *($$String$$, default: `$$<none>$$`)*
+$$allowed-origins$$:: $$The allowed origins.$$ *($$String$$, default: `$$*$$`)*
+$$path$$:: $$The path on which server WebSocket handler is exposed.$$ *($$String$$, default: `$$/websocket$$`)*
 
 === websocket.supplier.sock-js
 
-$$enable$$:: $$Enable SockJS service on the server. Default is 'false'$$ *($$Boolean$$, default: `$$<none>$$`)*
+$$enable$$:: $$Enable SockJS service on the server. Default is 'false'$$ *($$Boolean$$, default: `$$false$$`)*
 //end::configuration-properties[]
 
 == Examples
