--- a/functions/supplier/xmpp-supplier/README.adoc
+++ b/functions/supplier/xmpp-supplier/README.adoc
@@ -23,8 +23,8 @@ For more information on the various options available, please see link:src/main/
 
 ## Tests
 
-See this link:src/test/java/org/springframework/cloud/fn/consumer/xmpp/[test suite] for the various ways, this consumer is used.
+See this link:src/test/java/org/springframework/cloud/fn/consumer/xmpp/[test suite] for the various ways, this supplier is used.
 
 ## Other usage
 
-See this https://github.com/spring-cloud/stream-applications/blob/master/applications/sink/xmpp-sink/README.adoc[README] where this consumer is used to create a Spring Cloud Stream application where it makes a XMPP Sink.
+See this https://github.com/spring-cloud/stream-applications/blob/master/applications/source/xmpp-source/README.adoc[README] where this supplier is used to create a Spring Cloud Stream application where it makes a XMPP Source.
