--- a/applications/source/mongodb-source/README.adoc
+++ b/applications/source/mongodb-source/README.adoc
@@ -26,7 +26,7 @@ $$update-expression$$:: $$The SpEL expression in MongoDB update DSL style.$$ *($
 
 === spring.data.mongodb
 
-$$additional-hosts$$:: $$Additional server hosts. Cannot be set with URI or if 'host' is not specified. Additional hosts will use the default mongo port of 27017, if you want to use a different port you can use the "host:port" syntax.$$ *($$List<String>$$, default: `$$<none>$$`)*
+$$additional-hosts$$:: $$Additional server hosts. Cannot be set with URI or if 'host' is not specified. Additional hosts will use the default mongo port of 27017. If you want to use a different port you can use the "host:port" syntax.$$ *($$List<String>$$, default: `$$<none>$$`)*
 $$authentication-database$$:: $$Authentication database name.$$ *($$String$$, default: `$$<none>$$`)*
 $$auto-index-creation$$:: $$Whether to enable auto-index creation.$$ *($$Boolean$$, default: `$$<none>$$`)*
 $$database$$:: $$Database name.$$ *($$String$$, default: `$$<none>$$`)*
