Added header-filter function and processor.

--- a/README.adoc
+++ b/README.adoc
@@ -30,61 +30,81 @@ The following are the various components of this repository.
 |link:functions/supplier/cdc-debezium-supplier/README.adoc[CDC Debezium]
 |link:functions/function/aggregator-function/README.adoc[Aggregator]
 |link:functions/consumer/analytics-consumer/README.adoc[Analytics]
+
 |link:functions/supplier/file-supplier/README.adoc[File]
 |link:functions/function/filter-function/README.adoc[Filter]
 |link:functions/consumer/cassandra-consumer/README.adoc[Cassandra]
+
 |link:functions/supplier/ftp-supplier/README.adoc[FTP]
 |link:functions/function/header-enricher-function/README.adoc[Header-Enricher]
 |link:functions/consumer/elasticsearch-consumer/README.adoc[Elasticsearch]
 |
-|link:functions/function/http-request-function/README.adoc[HTTP Request]
+|link:functions/function/header-filter-function/README.adoc[Header-Filter]
 |link:functions/consumer/file-consumer/README.adoc[File]
+
 |link:functions/supplier/http-supplier/README.adoc[HTTP]
-|link:functions/function/image-recognition-function/README.adoc[Image Recognition(Tensorflow)]
+|link:functions/function/http-request-function/README.adoc[HTTP Request]
 |link:functions/consumer/ftp-consumer/README.adoc[FTP]
+
 |link:functions/supplier/jdbc-supplier/README.adoc[JDBC]
-|link:functions/function/object-detection-function/README.adoc[Object Detection(Tensorflow)]
+|link:functions/function/image-recognition-function/README.adoc[Image Recognition(Tensorflow)]
 |
 |link:functions/supplier/jms-supplier/README.adoc[JMS]
-|link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
+
+|link:functions/function/object-detection-function/README.adoc[Object Detection(Tensorflow)]
 |link:functions/consumer/jdbc-consumer/README.adoc[JDBC]
+
 |link:functions/supplier/mail-supplier/README.adoc[Mail]
-|link:functions/function/spel-function/README.adoc[SpEL]
+
+|link:functions/function/semantic-segmentation-function/README.adoc[Semantic Segmentation(Tensorflow)]
 |link:functions/consumer/log-consumer/README.adoc[Log]
+
 |link:functions/supplier/mongodb-supplier/README.adoc[MongoDB]
-|link:functions/function/splitter-function/README.adoc[Splitter]
+
+|link:functions/function/spel-function/README.adoc[SpEL]
 |link:functions/consumer/mongodb-consumer/README.adoc[MongoDB]
+
 |link:functions/supplier/mqtt-supplier/README.adoc[MQTT]
-|link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
+
+|link:functions/function/splitter-function/README.adoc[Splitter]
 |link:functions/consumer/mqtt-consumer/README.adoc[MQTT]
+
 |link:functions/supplier/rabbit-supplier/README.adoc[RabbitMQ]
-|link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
+|link:functions/function/task-launch-request-function/README.adoc[Task Launch Request]
 |link:functions/consumer/rabbit-consumer/README.adoc[RabbitMQ]
+
 |link:functions/supplier/s3-supplier/README.adoc[AWS S3]
-|link:functions/function/twitter-function/README.adoc[Twitter]
+|link:functions/function/tasklauncher-function/README.adoc[Task Launcher]
 |link:functions/consumer/redis-consumer/README.adoc[Redis]
+
 |link:functions/supplier/sftp-supplier/README.adoc[SFTP]
 |
 |link:functions/consumer/rsocket-consumer/README.adoc[RSocket]
+
 |link:functions/supplier/syslog-supplier/README.adoc[Syslog]
 |
 |link:functions/consumer/s3-consumer/README.adoc[AWS S3]
+
 |link:functions/supplier/tcp-supplier/README.adoc[TCP]
 |
 |link:functions/consumer/sftp-consumer/README.adoc[SFTP]
+
 |link:functions/supplier/time-supplier/README.adoc[Time]
 |
 |link:functions/consumer/tcp-consumer/README.adoc[TCP]
+
 |link:functions/supplier/twitter-supplier/README.adoc[Twitter]
-|
+|link:functions/function/twitter-function/README.adoc[Twitter]
 |link:functions/consumer/twitter-consumer/README.adoc[Twitter]
+
 |link:functions/supplier/websocket-supplier/README.adoc[Websocket]
 |
 |link:functions/consumer/websocket-consumer/README.adoc[Websocket]
-|link:functions/supplier/xmpp-supplier/README.adoc[XMPP]
+
+|
 |
 |link:functions/consumer/wavefront-consumer/README.adoc[Wavefront]
-|
+|link:functions/supplier/xmpp-supplier/README.adoc[XMPP]
 |
 |link:functions/consumer/xmpp-consumer/README.adoc[XMPP]
 |===
