Refactor CDC Debezium Source
 - Add AVRO format support. Defaults to JSON
 - Remove the Metadata repo configuration.
 - Remove the Spring property sort-cuts. Only the native Debezium properties are used.
 - change the native properties prefix from `cdc.config to cdc.debezium`.
 - Removes the need to fork and modify the Debezium engine code.
 - Add binding name strategy.

Remove old CDC projects and replace with the new implementation
Remove duplicate pom properties
remove non existing pom module
Rename `cdc-debezium-supplier/source` to `debezium-supplier/source`
streamline naming and tests
streamline supplier tests
test streamline. Github workflow
Fix Debezium engine generics mess
Break `DebeziumConfiguration` into engine auto-config and consumer configuration
add initial reactive consumer impl.
Splits Debezium into a pure supplier and a streaming source

  - Remove any SCS related dependencies from the supplier.
  - Supplier uses Sinks.Many.

complete the supplier vs source separation
Improve Debezium Egine auto-conf

 - Provide configuration hooks for OffsetCommitPolicy, ConnectorCallback,
   CompletionCallback and Clock with default implementations.
 - Remove obsolete code.

minor improvements
Rename cdc property prefix to `debezium` and `cdc.debezium` to `debezium.inner`
remove obsolete `StreamBridge` tests
address reviews. improve testing
Supplier tests. Rename `inner` to `properties`.
Streamline the README. Minor improvements
streamline supplier tests
final fixes

--- a/README.adoc
+++ b/README.adoc
@@ -27,7 +27,7 @@ The following are the various components of this repository.
 |===
 | `java.util.Supplier` | `java.util.Function` | `java.util.Consumer`
 
-|link:functions/supplier/cdc-debezium-supplier/README.adoc[CDC Debezium]
+|link:functions/supplier/debezium-supplier/README.adoc[Debezium supplier]
 |link:functions/function/aggregator-function/README.adoc[Aggregator]
 |link:functions/consumer/analytics-consumer/README.adoc[Analytics]
 
@@ -113,7 +113,7 @@ The following are the various components of this repository.
 
 |===
 | Source | Processor | Sink
-|link:applications/source/cdc-debezium-source/README.adoc[CDC Debezium]
+|link:applications/source/debezium-source/README.adoc[Debezium supplier]
 |link:applications/processor/aggregator-processor/README.adoc[Aggregator]
 |link:applications/sink/analytics-sink/README.adoc[Analytics]
 |link:applications/source/file-source/README.adoc[File]
